# gb_algorithms

./: .gitignore  CMakeLists.txt  HomeWork.c  HomeWork.h  Lesson1.c  Lesson1.h  Lesson1_Tests.cpp  Lesson2.c  Lesson2.h  Lesson2_Tests.cpp  Lesson3.c  Lesson3.h  Lesson3_Tests.cpp  Lesson4.c  Lesson4.h  Lesson4_Tests.cpp  Tests.cpp  Tests.h  main.cpp
